--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
             0%, 100% { filter: drop-shadow(0 0 8px #a855f7) drop-shadow(0 0 15px #6366f1); }
             50% { filter: drop-shadow(0 0 20px #d8b4fe) drop-shadow(0 0 35px #a855f7); }
         }
+        @keyframes balance-pop {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); color: #fbbf24; }
+            100% { transform: scale(1); }
+        }
+        @keyframes tab-fade-in {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes item-pop {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        @keyframes shimmer-fast {
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
+        }
+
+        .tab-content-enter {
+            animation: tab-fade-in 0.3s ease-out forwards;
+        }
+        .balance-update {
+            animation: balance-pop 0.2s ease-out;
+        }
+        .item-enter {
+            animation: item-pop 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
+        }
         .boink-number {
             position: absolute;
             pointer-events: none;
@@ -52,6 +79,20 @@
             background-image: radial-gradient(circle at 2px 2px, rgba(168, 85, 247, 0.1) 1px, transparent 0);
             background-size: 32px 32px;
             pointer-events: none;
+        }
+        .shimmer-bg {
+            position: relative;
+            overflow: hidden;
+        }
+        .shimmer-bg::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.05), transparent);
+            animation: shimmer-fast 2s infinite linear;
         }
         ::-webkit-scrollbar {
             display: none;
